--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Thinkful React Starter</title>
-
+<link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
 <link rel="stylesheet" href="css/index.css">
 
 <!-- Your HTML goes here -->
 
 <script src="js/index.js"></script>
 
+<div id="app"></div>
